docs: add info from add-contributors to docs page

--- a/apps/docs-app/docs/contributors.mdx
+++ b/apps/docs-app/docs/contributors.mdx
@@ -19,3 +19,14 @@ Brandon is an NgRx core team member, Angular GDE, sports ranter, and gif slinger
 [<GithubLogo className={styles.githubLogo} width="110" height="110" /><br />@brandonroberts on GitHub](https://github.com/brandonroberts)
 
 [<GithubSponsorsLogo width="120" height="120" /><br />Sponsor Brandon on GitHub Sponsors](https://github.com/sponsors/brandonroberts)
+
+## Acknowledgements
+
+<!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
+<!-- prettier-ignore-start -->
+<!-- markdownlint-disable -->
+
+<!-- markdownlint-restore -->
+<!-- prettier-ignore-end -->
+
+<!-- ALL-CONTRIBUTORS-LIST:END -->
