docs: add GitHub Accelerator to sponsors page

--- a/apps/docs-app/docs/sponsoring.mdx
+++ b/apps/docs-app/docs/sponsoring.mdx
@@ -3,8 +3,15 @@ sidebar_position: 5
 ---
 
 import GithubSponsorsLogo from '@site/static/img/logos/github-sponsors-logo.svg';
+import GithubLogo from '@site/static/img/logos/github-logo.svg';
 
-# Sponsoring
+# Sponsors
+
+<a href="https://github.blog/2023-04-12-github-accelerator-our-first-cohort-and-whats-next/" target="_blank">
+  <GithubLogo width="120" height="120" alt="GitHub Accelerator" />
+</a>
+
+## Sponsoring
 
 <GithubSponsorsLogo width="120" height="120" />
 
