docs: update contributors and sponsors sections

--- a/apps/docs-app/docs/contributors.mdx
+++ b/apps/docs-app/docs/contributors.mdx
@@ -16,7 +16,9 @@ import styles from './contributors.module.css';
 
 Brandon is an NgRx core team member, Angular GDE, sports ranter, and gif slinger.
 
-[<GithubSponsorsLogo width="120" height="120" /><br />Sponsor Brandon on GitHub Sponsors](https://github.com/sponsors/brandonroberts)
+![Robin Goetz](https://github.com/goetzrobin.png?size=240)
+
+Robin is a fullstack developer working with Angular, Spring and AWS.
 
 ## Contributors
 
