--- a/apps/docs-app/docs/sponsoring.mdx
+++ b/apps/docs-app/docs/sponsoring.mdx
@@ -5,20 +5,22 @@ sidebar_position: 5
 import GithubSponsorsLogo from '@site/static/img/logos/github-sponsors-logo.svg';
 import GithubLogo from '@site/static/img/logos/github-logo.svg';
 
-# Sponsors
+# Sponsor
 
-<a href="https://github.blog/2023-04-12-github-accelerator-our-first-cohort-and-whats-next/" target="_blank">
-  <GithubLogo width="120" height="120" alt="GitHub Accelerator" />
-</a>
-
-## Sponsoring
-
-<GithubSponsorsLogo width="120" height="120" />
+Analog is an MIT-licensed open-source project and completely free to use. The continual effort needed to maintain this project is supported by the financial backing of our sponsors.
 
 You can [sponsor Analog on GitHub Sponsors](https://github.com/sponsors/brandonroberts).
 
-As a thank you for sponsorships of at least USD 50 per month you can get a logo added to [the Analog README](https://github.com/analogjs/analog#readme) on GitHub and npm.
+### Business/Corporate Sponsorships
 
-Sponsorships of at least USD 100 per month earns the addition of a logo to [the Analog README](https://github.com/analogjs/analog#readme) on GitHub and npm as well as the homepage of the website. Additionally, you will receive thanks for your sponsorship in blog posts about Analog.
+Supporting OSS improves your brand's reputation, which is an important asset for any company that interacts with developers.
 
-For monthly sponsorships of greater amounts, contact [the Analog core team](/docs/contributors#analog-core-team) to discuss sponsorship opportunities further.
+If you are using Analog to build a revenue-generating product, sponsoring its development also helps your interests. it ensures the projects that your product relies on stay healthy and actively maintained. It also provides your brand with a positive position in the community also makes it easier to find and recruit Angular developers. The sponsorship also builds brand recognition and improves conversion.
+
+### Sponsoring as an Individual
+
+If you are an individual user and have enjoyed the productivity of using Analog, consider sponsoring me as a sign of appreciation - like buying me coffee once in a while. If you are not comfortable with a monthly-recurring sponsorship, GitHub also supports one-time donations!
+
+You can also try to convince your employer to sponsor Analog as a business. This may not be easy, but business sponsorships typically make a much larger impact on the sustainability of OSS projects than individual donations, so you will help us much more if you succeed.
+
+If you have any questions regarding sponsorships, please contact us at sponsor@analogjs.org.
