--- a/apps/docs-app/i18n/tr/docusaurus-plugin-content-docs/current.json
+++ b/apps/docs-app/i18n/tr/docusaurus-plugin-content-docs/current.json
@@ -12,7 +12,7 @@
     "description": "The label for category Routing in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.API Routes": {
-    "message": "Routes API",
+    "message": "API Routes",
     "description": "The label for category API Routes in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Static Site Generation": {
