--- a/apps/astro-app/src/pages/test.mdx
+++ b/apps/astro-app/src/pages/test.mdx
@@ -1,4 +1,9 @@
-import {CardComponent} from '../components/card.component.ts'
+import { CardComponent } from '../components/card.component.ts';
 
 Angular Component in an MDX file
-<CardComponent href="https://angular.io/" title="Angular" body="Built with Angular. ❤️" />
+
+<CardComponent
+  href="https://angular.io/"
+  title="Angular"
+  body="Built with Angular. ❤️"
+/>
