--- a/apps/docs-app/i18n/es/code.json
+++ b/apps/docs-app/i18n/es/code.json
@@ -275,11 +275,11 @@
     "description": "The label of the button to read the docs"
   },
   "homepage.sponsorSection.title": {
-    "message": "Analog es gratis, código abierto, y apoyado por nuestros patrocinantes.",
+    "message": "Analog es gratis, código abierto, y apoyado por nuestros patrocinadores.",
     "description": "The title of the sponsor section"
   },
   "homepage.sponsorSection.subtitle": {
-    "message": "Patrocinantes",
+    "message": "Patrocinadores",
     "description": "The subtitle of the sponsor section on the homepage"
   },
   "homepage.sponsorSection.sponsorButton": {
