docs: add es translation for testing

--- a/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current.json
+++ b/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current.json
@@ -60,7 +60,7 @@
     "description": "The label for the doc item Providers in sidebar docsSidebar, linking to the doc features/deployment/providers"
   },
   "sidebar.docsSidebar.doc.Adding Vitest": {
-    "message": "Agregando Vitest",
+    "message": "Incorporando Vitest",
     "description": "The label for the doc item Adding Vitest in sidebar docsSidebar, linking to the doc features/testing/vitest"
   },
   "sidebar.docsSidebar.doc.Nx": {
