--- a/apps/docs-app/i18n/es/code.json
+++ b/apps/docs-app/i18n/es/code.json
@@ -287,7 +287,7 @@
     "description": "The label of the button to sponsor Analog"
   },
   "features.fileBasedRouting": {
-    "message": "Analog usa enrutado basado en archivos y soporta rutas de API (servidor) para aplicaciones Angular.",
+    "message": "Analog usa enrutado basado en ficheros y soporta rutas de API (servidor) para aplicaciones Angular.",
     "description": "The description of the feature 'File-based routing and API routes'"
   },
   "features.vite": {
@@ -311,7 +311,7 @@
     "description": "The title of the feature \"Hybrid SSR/SSG support\""
   },
   "features.title.fileBasedRouting": {
-    "message": "Enrutado basado en archivos y rutas de API",
+    "message": "Enrutado basado en ficheros y rutas de API",
     "description": "The title of the feature \"File-based routing and API routes\""
   },
   "homepage.tagline": {
