docs: update link to point new angular.dev site

--- a/apps/astro-app/src/pages/test.mdx
+++ b/apps/astro-app/src/pages/test.mdx
@@ -3,7 +3,7 @@ import { CardComponent } from '../components/card.component.ts';
 Angular Component in an MDX file
 
 <CardComponent
-  href="https://angular.io/"
+  href="https://angular.dev/"
   title="Angular"
   body="Built with Angular. ❤️"
 />
