docs: update core contributors

--- a/apps/docs-app/docs/contributors.mdx
+++ b/apps/docs-app/docs/contributors.mdx
@@ -16,9 +16,41 @@ import styles from './contributors.module.css';
 
 Brandon is an NgRx core team member, Angular GDE, sports ranter, and gif slinger.
 
+### Robin Goetz
+
 ![Robin Goetz](https://github.com/goetzrobin.png?size=240)
 
-Robin is a fullstack developer working with Angular, Spring and AWS.
+Robin is a fullstack developer working with Angular, Spring and AWS, he's as well a core team member for Spartan UI.
+
+### Chau Tran
+
+![Chau Tran](https://github.com/nartc.png?size=240)
+
+Chau is a senior engineer for Nx, Angular GDE, Heavy VIM user and creator of Angular Three.
+
+### Marko Stanimirović
+
+![Marko Stanimirović](https://github.com/markostanimirovic.png?size=240)
+
+Marko is an NgRx core team member, Angular GDE, and an organizer of the Angular Belgrade group.
+
+### Josh Morony
+
+![Josh Morony](https://github.com/joshuamorony.png?size=240)
+
+Josh is a full time content creator, Angular GDE, Ionic Dev Expert and creator of Angular start and Ionic start courses.
+
+### Luis Castro
+
+![Luis Castro](https://github.com/luishcastroc.png?size=240)
+
+Luis is a software engineer for NAFC, passionate about technology, sports and food.
+
+### Andres Villanueva
+
+![Andres Villanueva](https://github.com/Villanuevand.png?size=240)
+
+Andres is a software engineer for herodevs, Angular and Firebase GDE.
 
 ## Contributors
 
