--- a/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx
+++ b/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx
@@ -16,9 +16,41 @@ import styles from './contributors.module.css';
 
 Brandon es miembro del equipo principal de NgRx, GDE de Angular, comentarista de deportes y entusiasta de GIFs animados.
 
+### Robin Goetz
+
 ![Robin Goetz](https://github.com/goetzrobin.png?size=240)
 
 Robin es un desarrollador fullstack que trabaja con Angular, Spring y AWS.
+
+### Chau Tran
+
+![Chau Tran](https://github.com/nartc.png?size=240)
+
+Chau es un ingeniero senior para Nx, GDE de Angular, Usuario intensivo de VIM y creador de Angular Three.
+
+### Marko Stanimirović
+
+![Marko Stanimirović](https://github.com/markostanimirovic.png?size=240)
+
+Marko es miembro del equipo central de NgRx, Angular GDE y organizador del grupo Angular Belgrade.
+
+### Josh Morony
+
+![Josh Morony](https://github.com/joshuamorony.png?size=240)
+
+Josh es un creador de contenido a tiempo completo, Angular GDE, Ionic Dev Expert y creador de los cursos Angular start y Ionic start.
+
+### Luis Castro
+
+![Luis Castro](https://github.com/luishcastroc.png?size=240)
+
+Luis es ingeniero de software para NAFC, apasionado de la tecnología, los deportes y la comida.
+
+### Andres Villanueva
+
+![Andres Villanueva](https://github.com/Villanuevand.png?size=240)
+
+Andres es un ingeniero en software para herodevs, GDE en Angular y Firebase.
 
 ## Contribuidores
 
