docs: update contributors with comments

--- a/apps/docs-app/docs/contributors.mdx
+++ b/apps/docs-app/docs/contributors.mdx
@@ -20,7 +20,7 @@ Brandon is an NgRx core team member, Angular GDE, sports ranter, and gif slinger
 
 ![Robin Goetz](https://github.com/goetzrobin.png?size=240)
 
-Robin is a fullstack developer working with Angular, Spring and AWS, he's as well a core team member for Spartan UI.
+Robin is a fullstack developer working with Angular, Spring, and AWS. He's also a core team member for Spartan UI.
 
 ### Chau Tran
 
@@ -38,7 +38,7 @@ Marko is an NgRx core team member, Angular GDE, and an organizer of the Angular 
 
 ![Josh Morony](https://github.com/joshuamorony.png?size=240)
 
-Josh is a full time content creator, Angular GDE, Ionic Dev Expert and creator of Angular start and Ionic start courses.
+Josh is a full-time content creator, Angular GDE, Ionic Dev Expert, and creator of Angular Start and Ionic Start courses.
 
 ### Luis Castro
 
@@ -50,7 +50,7 @@ Luis is a software engineer for NAFC, passionate about technology, sports and fo
 
 ![Andres Villanueva](https://github.com/Villanuevand.png?size=240)
 
-Andres is a software engineer for herodevs, Angular and Firebase GDE.
+Andres is a software engineer for HeroDevs, Angular and Firebase GDE.
 
 ## Contributors
 
