--- a/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx
+++ b/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current/contributors.mdx
@@ -20,7 +20,7 @@ Brandon es miembro del equipo principal de NgRx, GDE de Angular, comentarista de
 
 ![Robin Goetz](https://github.com/goetzrobin.png?size=240)
 
-Robin es un desarrollador fullstack que trabaja con Angular, Spring y AWS.
+Robin es un desarrollador fullstack que trabaja con Angular, Spring y AWS. También pertenece al equipo principal de Spartan UI.
 
 ### Chau Tran
 
@@ -50,7 +50,7 @@ Luis es ingeniero de software para NAFC, apasionado de la tecnología, los depor
 
 ![Andres Villanueva](https://github.com/Villanuevand.png?size=240)
 
-Andres es un ingeniero en software para herodevs, GDE en Angular y Firebase.
+Andres es un ingeniero en software para HeroDevs, GDE en Angular y Firebase.
 
 ## Contribuidores
 
