--- a/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current/sponsoring.mdx
+++ b/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current/sponsoring.mdx
@@ -9,18 +9,18 @@ import GithubLogo from '@site/static/img/logos/github-logo.svg';
 
 Analog ist ein MIT-lizenziertes Open-Source-Projekt und kann völlig frei verwendet werden. Der kontinuierliche Aufwand, der zur Aufrechterhaltung dieses Projekts erforderlich ist, wird durch die finanzielle Unterstützung unserer Sponsoren getragen.
 
-Sie können [Analog auf GitHub Sponsors unterstützen](https://github.com/sponsors/brandonroberts).
+Du kannst [Analog auf GitHub Sponsors unterstützen](https://github.com/sponsors/brandonroberts).
 
 ### Geschäftliche/Firmen Förderungen
 
-Die Unterstützung von OSS verbessert den Ruf Ihrer Marke, was für jedes Unternehmen, das mit Entwicklern zu tun hat, ein wichtiger Vorteil ist.
+Die Unterstützung von OSS verbessert den Ruf eurer Marke, was für jedes Unternehmen, das mit Entwicklern zu tun hat, ein wichtiger Vorteil ist.
 
-Wenn Sie Analog verwenden, um ein umsatzbringendes Produkt zu entwickeln, hilft das Sponsoring seiner Entwicklung auch Ihren Interessen. Es verschafft Ihrer Marke auch eine positive Position in der Community und macht es einfacher, Angular-Entwickler zu finden und einzustellen. Durch das Sponsoring wird auch der Wiedererkennungswert der Marke gesteigert und die Konversion verbessert.
+Wenn ihr Analog verwendet, um ein umsatzbringendes Produkt zu entwickeln, hilft das Sponsoring seiner Entwicklung auch eurem Interesse. Es verschafft eurer Marke auch eine positive Position in der Community und macht es einfacher, Angular-Entwickler zu finden und einzustellen. Durch das Sponsoring wird auch der Wiedererkennungswert der Marke gesteigert und die Konversion verbessert.
 
 ### Unterstützung als Einzelperson
 
-Wenn Sie ein einzelner Nutzer sind und die Produktivität von Analog genossen haben, sollten Sie in Erwägung ziehen, mich als Zeichen der Wertschätzung zu sponsern - zum Beispiel, indem Sie mir ab und zu einen Kaffee spendieren. Wenn Sie sich mit einem monatlich wiederkehrenden Sponsoring nicht wohlfühlen, unterstützt GitHub auch einmalige Spenden!
+Wenn du ein einzelner Nutzer bist und die Produktivität von Analog genossen hast, solltest du in Erwägung ziehen, mich als Zeichen der Wertschätzung zu unterstützen - zum Beispiel, indem du mir ab und zu einen Kaffee spendierst. Wenn du dich mit einem monatlich wiederkehrenden Sponsoring nicht wohlfühlen, unterstützt GitHub auch einmalige Spenden!
 
-Sie können auch versuchen, Ihren Arbeitgeber zu überzeugen, Analog als Unternehmen zu sponsern. Das mag nicht einfach sein, aber Unternehmenssponsoring hat in der Regel einen viel größeren Einfluss auf die Nachhaltigkeit von OSS-Projekten als Einzelspenden, so dass Sie uns viel mehr helfen, wenn Sie Erfolg haben.
+Du kannst auch versuchen, deinen Arbeitgeber zu überzeugen, Analog als Unternehmen zu unterstützen. Das mag nicht einfach sein, aber Unternehmenssponsoring hat in der Regel einen viel größeren Einfluss auf die Nachhaltigkeit von OSS-Projekten als Einzelspenden, so dass du uns viel mehr hilfst, wenn du Erfolg hast.
 
-Wenn Sie Fragen zur Förderungen haben, kontaktieren Sie uns bitte unter sponsor@analogjs.org.
+Wenn du Fragen zur Förderungen hast, kontaktieren uns bitte unter sponsor@analogjs.org.
