docs: add translation for contributors

--- a/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current.json
+++ b/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current.json
@@ -28,7 +28,7 @@
     "description": "The label for category Code Generation in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Deployment": {
-    "message": "Bereitstellung",
+    "message": "Veröffentlichung",
     "description": "The label for category Deployment in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Testing": {
