--- a/apps/docs-app/i18n/zh-hans/docusaurus-plugin-content-docs/current.json
+++ b/apps/docs-app/i18n/zh-hans/docusaurus-plugin-content-docs/current.json
@@ -24,11 +24,11 @@
     "description": "The label for category API Routes in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.category.Data Fetching": {
-    "message": "获取数据",
+    "message": "数据获取",
     "description": "The label for category Data Fetching in sidebar docsSidebar"
   },
   "sidebar.docsSidebar.doc.Server-Side Data Fetching": {
-    "message": "服务端获取数据",
+    "message": "服务端数据获取",
     "description": "The label for the doc item Server-Side Data Fetching in sidebar docsSidebar, linking to the doc features/data-fetching/server-side-data-fetching"
   },
 
@@ -85,7 +85,7 @@
     "description": "The label for the doc item Content Routes in sidebar docsSidebar, linking to the doc features/routing/content"
   },
   "sidebar.docsSidebar.doc.Providers": {
-    "message": "供应商",
+    "message": "依赖提供者",
     "description": "The label for the doc item Providers in sidebar docsSidebar, linking to the doc features/deployment/providers"
   },
   "sidebar.docsSidebar.doc.Adding Vitest": {
