docs: add zh-hans on support and og image page

--- a/apps/docs-app/i18n/zh-hans/docusaurus-theme-classic/navbar.json
+++ b/apps/docs-app/i18n/zh-hans/docusaurus-theme-classic/navbar.json
@@ -7,6 +7,10 @@
     "message": "文档",
     "description": "Navbar item with label Docs"
   },
+  "item.label.Support": {
+    "message": "支持",
+    "description": "Navbar item with label Support"
+  },
   "item.label.GitHub": {
     "message": "GitHub",
     "description": "Navbar item with label GitHub"
