docs: add Zerops as Deployment Partner

--- a/apps/docs-app/docs/sponsoring.mdx
+++ b/apps/docs-app/docs/sponsoring.mdx
@@ -5,11 +5,26 @@ sidebar_position: 5
 import GithubSponsorsLogo from '@site/static/img/logos/github-sponsors-logo.svg';
 import GithubLogo from '@site/static/img/logos/github-logo.svg';
 
-# Sponsor
+# Sponsorships and Partnerships
 
-Analog is an MIT-licensed open-source project and completely free to use. The continual effort needed to maintain this project is supported by the financial backing of our sponsors.
+Analog is an MIT-licensed open-source project and completely free to use. The continual effort needed to maintain this project is supported by the financial backing of our partners and sponsors.
 
-You can [sponsor Analog on GitHub Sponsors](https://github.com/sponsors/brandonroberts).
+You can [support Analog on GitHub Sponsors](https://github.com/sponsors/brandonroberts).
+
+## Partnerships
+
+Partnerships are above and beyond sponsorships where we work closely with you to build out a strategy that is
+beneficial to all parties involved, with marketing and lead-gen campaigns.
+
+Available Partnerships
+
+- [x] Hosting Platforms
+- [ ] Consulting, Courses, Training
+- [ ] Content Management Systems
+- [ ] Observability/Reporting/Feedback
+- [ ] Something else!
+
+Schedule a [Meeting](https://calendly.com/brandontroberts/session) or [Contact Us](mailto:partnerships@analogjs.org?subject=Partnerships) directly to disucss partnership opportunities!
 
 ### Business/Corporate Sponsorships
 
