docs: update german sponsoring page

--- a/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current/sponsoring.mdx
+++ b/apps/docs-app/i18n/de/docusaurus-plugin-content-docs/current/sponsoring.mdx
@@ -5,11 +5,25 @@ sidebar_position: 5
 import GithubSponsorsLogo from '@site/static/img/logos/github-sponsors-logo.svg';
 import GithubLogo from '@site/static/img/logos/github-logo.svg';
 
-# Unterstützen
+# Förderungen und Kooperationen
 
-Analog ist ein MIT-lizenziertes Open-Source-Projekt und kann völlig frei verwendet werden. Der kontinuierliche Aufwand, der zur Aufrechterhaltung dieses Projekts erforderlich ist, wird durch die finanzielle Unterstützung unserer Sponsoren getragen.
+Analog ist ein vom MIT lizenziertes Open-Source-Projekt und kann kostenlos genutzt werden. Der kontinuierliche Aufwand, der für die Aufrechterhaltung dieses Projekts erforderlich ist, wird durch die finanzielle Unterstützung unserer Partner und Sponsoren gedeckt.
 
 Du kannst [Analog auf GitHub Sponsors unterstützen](https://github.com/sponsors/brandonroberts).
+
+### Kooperationen
+
+Partnerschaften gehen weit über Sponsoring hinaus, bei dem wir eng mit euch zusammenarbeiten, um eine Strategie zu entwickeln, die für alle Beteiligten von Vorteil ist, mit Marketing- und Lead-Gen-Kampagnen.
+
+Verfügbare Kooperationen
+
+- [x] Hosting-Plattformen
+- [ ] Beratung, Kurse, Schulungen
+- [ ] Content-Management-Systeme
+- [ ] Beobachtung/Berichterstattung/Feedback
+- [ ] Etwas anderes!
+
+Vereinbare direkt ein [Meeting](https://calendly.com/brandontroberts/session) oder [kontaktiere uns](mailto:partnerships@analogjs.org?subject=Partnerships), um Möglichkeiten für Kooperationen zu besprechen!
 
 ### Geschäftliche/Firmen Förderungen
 
