--- a/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current.json
+++ b/apps/docs-app/i18n/es/docusaurus-plugin-content-docs/current.json
@@ -98,5 +98,9 @@
   "sidebar.docsSidebar.doc.Sponsoring": {
     "message": "Patrocinio",
     "description": "The label for the doc item Sponsoring in sidebar docsSidebar, linking to the doc sponsoring"
+  },
+  "sidebar.docsSidebar.doc.Support": {
+    "message": "Soporte",
+    "description": "The label for the doc item Support in sidebar docsSidebar, linking to the doc sponsoring"
   }
 }
