--- a/apps/docs-app/i18n/pt-br/docusaurus-theme-classic/footer.json
+++ b/apps/docs-app/i18n/pt-br/docusaurus-theme-classic/footer.json
@@ -27,7 +27,7 @@
     "message": "Contribuindo",
     "description": "The label of footer link with label=Contributing linking to docs/contributing"
   },
-  "link.item.label.Sponsor": {
+  "link.item.label.Sponsoring": {
     "message": "Patrocinando",
     "description": "The label of footer link with label=Sponsor linking to docs/sponsoring"
   },
