--- a/apps/docs-app/i18n/zh-hans/docusaurus-theme-classic/footer.json
+++ b/apps/docs-app/i18n/zh-hans/docusaurus-theme-classic/footer.json
@@ -27,7 +27,7 @@
     "message": "成为贡献者",
     "description": "The label of footer link with label=Contributing linking to docs/contributing"
   },
-  "link.item.label.Sponsor": {
+  "link.item.label.Sponsoring": {
     "message": "赞助",
     "description": "The label of footer link with label=Sponsor linking to docs/sponsoring"
   },
