docs: add plugin support to generate llms.txt from documentation

--- a/apps/docs-app/docs/contributors.mdx
+++ b/apps/docs-app/docs/contributors.mdx
@@ -8,6 +8,8 @@ import styles from './contributors.module.css';
 
 # Contributors
 
+AnalogJS is maintained by a team of contributors and community.
+
 ## Analog core team
 
 ### Brandon Roberts
